src/Components/Collections/HomePage/About/About.module.css
/* ... */
@media screen and (min-width: 848px) and (max-width: 1279px) {
    .entireAbout {
        display: flex;
        padding: 64px 80px 120px 80px;
        align-items: center;
        justify-content: center;
    }

    .aboutContainer {
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
        gap: 40px;
        align-self: stretch;
        max-width: 800px;
        width: 100%;
    }

    .aboutTitleText {
        color: #000;
        text-align: center;
        font-family: 'Montserrat';
        font-size: 32px;
        font-style: normal;
        font-weight: 500;
        line-height: 100%; /* 32px */
    }

    .aboutImgContainer {
        display: flex;
        width: 100%;
        max-width: 324px;
        height: auto;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 8px;
    }

    .aboutImg {
        width: 100%;
        height: auto;
    }

    .aboutHeaderText {
        color: #111;
        text-align: center;
        font-family: 'Montserrat';
        font-size: 28px;
        font-style: normal;
        font-weight: 500;
        line-height: 160%; /* 44.8px */
        margin-top: -24px;
        margin-bottom: -24px;
    }
    
    .aboutBodyText {
        color: #111;
        text-align: center;
        font-family: Verdana;
        font-size: 16px;
        font-style: normal;
        font-weight: 400;
        line-height: 180%; /* 28.8px */
    }
    
    .aboutQualifications {
        display: flex;
        padding: 24px 0px;
        flex-direction: column;
        align-items: flex-start;
        gap: 16px;
        align-self: stretch;
    }
    
    .aboutQualificationsEducation {
        display: flex;
        padding: 24px 0px;
        flex-direction: column;
        align-items: flex-start;
        gap: 16px;
        align-self: stretch;
        border-top: 1px solid #E4E5DA;
    }
    
    .aboutQualificationsTitle {
        display: flex;
        justify-content: flex-start;
        align-items: flex-start;
        color: #000;
        font-family: 'Montserrat';
        font-size: 20px;
        font-style: normal;
        font-weight: 500;
        line-height: 100%; /* 20px */
    }

    .aboutQualificationsEducationItemSubTitle {
        color: #000;
        font-family: "Verdana";
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: 150%;
    }
    
    .aboutQualificationsEducationItems {
        display: flex;
        flex-direction: row;
        align-items: flex-start;
        gap: 40px;
        align-self: stretch;
      
    }
    
    .aboutQualificationsEducationItem {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        flex: 1 0 0;
    }
    
    .aboutQualificationsEducationItemTitle {
        display: flex;
        flex-direction: column;
        color: #000;
        font-family: Verdana;
        font-size: 15px;
        font-style: normal;
        font-weight: 400;
        line-height: 150%;
    }
    
    .aboutQualificationsEducationItemDate {
        color: #707070;
        font-family: Verdana;
        font-size: 15px;
        font-style: normal;
        font-weight: 400;
        line-height: 100%; /* 13px */
        margin-top: 16px;
    }
    
    .aboutQualificationsHobbies {
        display: flex;
        padding: 24px 0px;
        flex-direction: column;
        align-items: flex-start;
        gap: 16px;
        align-self: stretch;
        border-top: 1px solid #E4E5DA;
        border-bottom: 1px solid #E4E5DA;
        color: #000;
        font-family: Verdana;
        font-size: 15px;
        font-style: normal;
        font-weight: 400;
        line-height: 140%; /* 19.6px */
    }
    
    .aboutLinks {
        display: flex;
        justify-content: center;
        align-items: flex-start;
        gap: 40px;
        text-decoration: none;
        color: black;
        text-align: center;
        font-family: Verdana;
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: 140%; /* 19.6px */
    }

    .aboutAnchor {
        color: black;
        text-decoration: none;
    }

    .aboutAnchor:hover {
        color: green;
        transition: 0.5s;
    }

    .aboutTalkButton {
        display: flex;
        height: 44px;
        padding: 15px 17px;
        justify-content: center;
        color: #FFF;
        font-family: "Verdana";
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: 100%; /* 14px */
        align-items: center;
        border-radius: 10px;
        background: #111;
        color: white;
        border: none;
    }

    .aboutTalkButton:hover {
        cursor: pointer;
        background: #2e2e2e;
    }
}
/* ... */

